# usbd-uac2

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
examples/: README.md
examples/lpc55s28/: Cargo.toml
examples/lpc55s28-evk/: Cargo.toml  Embed.toml  memory.x
examples/lpc55s28-evk-dma/: Cargo.toml  build.rs  memory.x
examples/lpc55s28-evk-dma/.cargo/: config.toml
examples/lpc55s28-evk-dma/src/: dma.rs  hw.rs  main.rs  wm8904.rs
examples/lpc55s28-evk/.cargo/: config.toml
examples/lpc55s28-evk/src/: hw.rs  main.rs  wm8904.rs
examples/lpc55s28/src/: main.rs
src/: constants.rs  cursor.rs  descriptors.rs  lib.rs  log.rs
